--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -11,7 +11,7 @@
  alink="#66ffff" link="#66ffff" vlink="#ff99ff">
 <center>
 <h1>TENTATIVE SCHEDULE</h1>
-<h1>CPSC:4/526, TR 9:15 - 10:30, KOLBE 213, FALL 2024</h1>
+<h1>CPSC:4/526, TR 9:15 - 10:30, KOLBE 51, FALL 2024</h1>
 </center>
 <table nosave="" border="1" width="100%">
   <tbody>
@@ -35,10 +35,17 @@
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug 26 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Aug 27</td>
+ valign="top">Aug 27<br>
+      <div style="text-align: center;">Intro, Lecture O1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug 28 </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Aug 29</td>
+ valign="top">Aug 29<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+O1 (from slide 30), O2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Aug 30</td>
     </tr>
