--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -55,15 +55,19 @@ Kropff, CISS<span style="font-weight: bold;"><br>
 </span>
 <ul>
   <li> Enrollment permission forms: <a
- href="497%20Indivudal%20Study%20in%20CS.pdf">CPSC 497</a>, <a
- href="498%20Sr%20Honors%20Proejct.pdf">CPSC 498</a></li>
-  <li><a href="signaturePage.doc">Project Report Signature
+ href="https://timoneilu.github.io/teaching/honors/497%20Indivudal%20Study%20in%20CS.pdf">CPSC
+497</a>, <a
+ href="https://timoneilu.github.io/teaching/honors/498%20Sr%20Honors%20Proejct.pdf">CPSC
+498</a></li>
+  <li><a
+ href="https://timoneilu.github.io/teaching/honors/signaturePage.doc">Project
+Report Signature
 Page,
 modified specifically for CS majors</a></li>
 </ul>
 <span style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;">For
-Students Graduating in Fall 2024</span><br>
+Students Graduating in Fall 2025</span><br>
 <ul>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
@@ -82,7 +86,7 @@ prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
 Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Fall 2024 </span>semester.<br>
+ style="font-weight: bold;">Fall 2025 </span>semester.<br>
     </span></span></li>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
@@ -117,8 +121,9 @@ project </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">through <a
  href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
 Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span>Friday March 1 2024<span
- style="font-weight: bold;"> </span>(<span style="font-style: italic;">already
+ style="font-weight: bold;"></span>Monday March 3 2025<span
+ style="font-weight: bold;"> </span><span style="font-weight: bold;"> </span>(<span
+ style="font-style: italic;">already
 passed</span>) <span style="font-style: italic;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-style: italic;"></span><span style="font-style: italic;"></span><span
@@ -127,25 +132,26 @@ passed</span>) <span style="font-style: italic;"></span><span
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday November 15 2024<br>
+ style="font-weight: bold;">Friday November 14 2025<br>
       </span></span></span></li>
   </ul>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday November 22 2024</span></span></span></li>
+ style="font-weight: bold;">Friday November 21 2025<br>
+      </span></span></span></li>
   </ul>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday November 26 2024 </span>(3 weeks
+ style="font-weight: bold;">Tuesday November 25 2025 </span>(3 weeks
 before grades are due)</span></span></li>
     <li>Final electronic submission of completed project report with
 all signatures <span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">to <a
  href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
 Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday December 6 2024<br>
+ style="font-weight: bold;">Friday December 5 2025<br>
       </span></li>
     <ul>
       <li><span style="font-weight: bold;">Remember to include your
@@ -154,7 +160,7 @@ abstract or the system won't permit the upload!</span></li>
   </ul>
 </ul>
 <span style="font-weight: bold;">For
-Students Graduating in Spring 2025<br>
+Students Graduating in Spring 2026<br>
 </span>
 <ul>
   <li>CS majors: have registered for <span
@@ -165,7 +171,7 @@ in
 Computer </span><span style="color: rgb(255, 102, 102);">Science<span
  style="color: rgb(0, 0, 0);"> </span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
-the <span style="font-weight: bold;">Fall 2024 </span>semester</span></span><span
+the <span style="font-weight: bold;">Fall 2025 </span>semester</span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
@@ -175,7 +181,7 @@ the <span style="font-weight: bold;">Fall 2024 </span>semester</span></span><spa
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
 Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Spring 2025 </span>semester.</span></span></li>
+ style="font-weight: bold;">Spring 2026 </span>semester.</span></span></li>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">At most <span
@@ -212,27 +218,27 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
       </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);"><span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Tuesday October 1 2024 </span>(<span
- style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold;">Wednesday October 1 2025</span><span
+ style="font-weight: bold;"> </span>(<span style="font-style: italic;">estimated</span>)<span
  style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday April 11 2025<br>
+ style="font-weight: bold;">Friday April 10 2026<br>
       </span></span></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday April 18 2025</span></span></span><span
+ style="font-weight: bold;">Friday April 17 2026</span></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday April 22 2025 </span>(3 weeks
+ style="font-weight: bold;">Tuesday April 21 2026 </span>(3 weeks
 before grades are due)</span></span></li>
     <li>Final electronic submission of completed project report with
 all signatures <span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">to <a
  href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
 Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday May 2 2025<br>
+ style="font-weight: bold;">Friday May 1 2026<br>
       </span></li>
     <ul>
       <li><span style="font-weight: bold;">Remember to include your
@@ -241,7 +247,7 @@ abstract or the system won't permit the upload!</span></li>
   </ul>
 </ul>
 <span style="font-weight: bold;">For
-Students Graduating in Summer 2025</span>
+Students Graduating in Summer 2026</span>
 <ul>
   <li>CS majors: have registered for <span
  style="color: rgb(255, 102, 102);">2-3
@@ -263,7 +269,7 @@ prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
 Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Summer 2025 </span>semester.<br>
+ style="font-weight: bold;">Summer 2026 </span>semester.<br>
     </span></span></li>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
@@ -303,35 +309,37 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"><span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Monday December 2 2024 </span><span
- style="font-style: italic;"></span><span style="font-weight: bold;"></span><span
+ style="font-weight: bold;">Monday December 1 2025 </span>(<span
+ style="font-style: italic;">estimated</span>)<span
+ style="font-weight: bold;"> </span><span style="font-style: italic;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
+ style="font-weight: bold;"></span><span style="font-weight: bold;"> </span><span
+ style="font-style: italic;"></span></li>
   </ul>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday July 18 2025<br>
+ style="font-weight: bold;">Friday July 17 2026<br>
       </span></span></span></li>
   </ul>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday July 25 2025</span></span></span><span
+ style="font-weight: bold;">Friday July 24 2026</span></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
   </ul>
   <ul>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday July 29 2025 </span>(3 weeks
+ style="font-weight: bold;">Tuesday July 28 2026 </span>(3 weeks
 before grades are due)</span></span></li>
     <li>Final electronic submission of completed project report with
 all signatures <span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">to <a
  href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
 Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday August 1 2025<br>
+ style="font-weight: bold;">Friday July 31 2026<br>
       </span></li>
     <ul>
       <li><span style="font-weight: bold;">Remember to include your
@@ -359,21 +367,21 @@ Honors distribution courses</span> by <span style="font-weight: bold;">April
 attend the Sophomore symposium in January.</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Fall 2025 </span>grads:<span
+project, <span style="font-weight: bold;">Fall 2026 </span>grads:<span
  style="font-weight: bold;"> </span></span></span><span
- style="font-weight: bold;">Monday March 3 2025</span><span
+ style="font-weight: bold;">Monday March 2 2026</span><span
  style="font-weight: bold;"> </span>(<span style="font-style: italic;">estimated</span>)</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Spring 2026 </span>grads: <span
+project, <span style="font-weight: bold;">Spring 2027 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Wednesday October 1 2025 </span>(<span
+ style="font-weight: bold;">Thursday October 1 2026 </span>(<span
  style="font-style: italic;">estimated</span>)</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Summer 2026 </span>grads: <span
+project, <span style="font-weight: bold;">Summer 2027 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Monday December 1 2025 </span>(<span
+ style="font-weight: bold;">Tuesday December 1 2026 </span>(<span
  style="font-style: italic;">estimated</span>)</li>
 </ul>
 <span style="font-weight: bold;">Important Notes<br>
@@ -425,20 +433,26 @@ Department</a>, <a href="http://www.uakron.edu/honors/">Honors College</a></li>
  href="http://www.uakron.edu/computer-science/academics/undergraduate-programs/cs-honor-guidelines.dot">Guidelines
 for Honors Research Project (CS majors)<br>
     </a></li>
-  <li>Other Honors College forms: <a href="Ideas%20to%20Consider.pdf">ideas
+  <li>Other Honors College forms: <a
+ href="https://timoneilu.github.io/teaching/honors/Ideas%20to%20Consider.pdf">ideas
 to consider</a></li>
   <li>Placement info: <a
  href="https://www.uakron.edu/modlang/academics/undergraduate/bcas-language-requirement.dot">foreign
 language</a>, <a
  href="https://bulletin.uakron.edu/undergraduate/important-policies/ap-information/">AP
-exams</a>, <a href="placement.html">math/English comp</a><br>
+exams</a>, <a
+ href="https://timoneilu.github.io/teaching/honors/placement.html">math/English
+comp</a><br>
   </li>
   <li>... more to come ...<br>
   </li>
 </ul>
 <span style="font-weight: bold;"><br>
 </span><span style="font-style: italic;">
-<script language="JavaScript"> document.write("<br>Last Updated " + document.lastModified);</script>.
+<script language="JavaScript"> document.write("<br>Last Updated " + document.lastModified);</script><br>
 </span><br>
 </body>
 </html>
+
+</html>
+
